fixed the container that covers the about aka the  idea image

--- a/web/main/static/style.css
+++ b/web/main/static/style.css
@@ -197,3 +197,25 @@ body {
 .title:hover{
   color:var(--lig-bp);
 }
+
+.container2 {
+	margin-top: 0px;
+	top: 700px;
+	position: absolute;
+	z-index:-15;
+	height: 500px;
+	width: 100%;
+	background-color: #2c2d7a;
+}
+
+.container3 {
+	margin-top: 0px;
+	top: 630px;
+	position: absolute;
+	z-index:0;
+	height: 500px;
+	width: 100%;
+	font-family: 'Raleway', sans-serif;
+	font-weight: 900;
+	background-color: #12133f;
+}
